# rust-embedded-examples

./: .gitignore  README.md
examples/blink/: Cargo.toml
examples/blink-hal/: README.md  memory.x
examples/blink-hal/src/: main.rs
examples/blink-no-hal/: README.md
examples/blink/src/: main.rs
examples/peripheral-access/: Cargo.toml
examples/peripheral-access/src/: main.rs
examples/rtic/: Cargo.toml  README.md
examples/rtic-serial/: Cargo.toml  README.md
examples/rtic-serial/src/: main.rs
examples/rtic/serial-gui/: app.py  defines.py  uart.py
examples/rtic/src/: lcd.rs  main.rs
examples/serial-echo/: Cargo.toml  README.md
examples/serial-echo/src/: main.rs
examples/serial-pwm/: Cargo.toml  README.md
examples/serial-pwm-interrupt/: Cargo.toml  README.md
examples/serial-pwm-interrupt/src/: main.rs
examples/serial-pwm-polling/src/: main.rs
examples/serial-pwm/src/: main.rs
examples/serial/.cargo/: config
examples/serial/src/: main.rs
